<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:hint="@string/toCount"
        android:lines="3"
        android:maxLines="3"
        android:minLines="3"
        android:singleLine="false"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColorLink="#DA582F"
        android:textSize="30sp"
        tools:ignore="RtlCompat"

        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >


            <Button
                android:id="@+id/button"

                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="инженерный вид"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear">

            </Button>
            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/percent">
            </Button>
            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/del">
            </Button>

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"

                android:text="@string/div">

            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/seven">
            </Button>
            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/eight">
            </Button>
            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/nine">
            </Button>
            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/mult">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/four">
            </Button>
            <Button
                android:id="@+id/button10"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/five">
            </Button>
            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/six">
            </Button>
            <Button
                android:id="@+id/button12"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/minus">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="200dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/one">
            </Button>
            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/two">
            </Button>
            <Button
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/three">
            </Button>
            <Button
                android:id="@+id/button16"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/plus">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="250dp"

            android:layout_weight="1">
            <Button
                android:id="@+id/button17"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/plusMinus">
            </Button>
            <Button
                android:id="@+id/button18"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/zero">
            </Button>
            <Button
                android:id="@+id/button19"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/dot">
            </Button>
            <Button
                android:id="@+id/button20"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/result">
            </Button>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:visibility="gone"

            android:layout_weight="1">
            <Button
                android:id="@+id/button21"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/sin">
            </Button>
            <Button
                android:id="@+id/button22"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/cos">
            </Button>
            <Button
                android:id="@+id/button23"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/tan">
            </Button>
            <Button
                android:id="@+id/button24"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/log">
            </Button>
            <Button
                android:id="@+id/button25"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/ln">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:visibility="gone"

            android:layout_weight="1">
            <Button
                android:id="@+id/button26"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/set1">
            </Button>
            <Button
                android:id="@+id/button27"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/set2">
            </Button>
            <Button
                android:id="@+id/button28"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/degree">
            </Button>
            <Button
                android:id="@+id/button29"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/sqrt">
            </Button>
            <Button
                android:id="@+id/button30"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/fac">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp"
            android:visibility="gone"

            android:layout_weight="1">
            <Button
                android:id="@+id/button31"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/Pi"
                android:textAllCaps="false"
                >

            </Button>

            <Button
                android:id="@+id/button32"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exp"
                android:textAllCaps="false">

            </Button>
            <Button
                android:id="@+id/button33"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/inv">
            </Button>
            <Button
                android:id="@+id/button34"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/rad">
            </Button>
            <Button
                android:id="@+id/button35"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/deg">
            </Button>

        </LinearLayout>


    </FrameLayout>

</LinearLayout>
